[V4.5 R4.9] -
   19/01/21 /AB Additional Feature - FullAudit - If journals were entered show them on the new detailed audit.

[V4.5 R4.8] -
   11/01/21 /MK Bug Fix - uBankImport - SaveTransactions - Check to see if the BankCSVDetailTempTableDB.NomName field has a value, if not then use BankCSVTempTableDB.NomName.
   11/01/21 /MK Bug Fix - uBankFileSelector - LoadBankFilesToGrid - Sort the MemData by CreationDate in Descending so that the grid starts in this order.
                                                                    If we don't do this sort here then when the user highlights a file and clicks import,
                                                                    the program switches to sort by name and the wrong file is imported.

[V4.5 R4.7] -
   16/12/20 /MK Additional Feature - MainUnit - Added the Bank Audit Trail to the reports page.
                                              - Increased the height of the More Reports hyperlink so that it would stand out.

[V4.5 R4.6] -
   13/11/20 /MK Change - MainUnit - FormActivate - Don't show BankLinkTimer anymore instead show BankLink select file screen and then show AppInfo and NewFeatures screen.
                                  - Bold the company name in the status bar - TGM request.    
   26/11/20 /MK Change - uDataBackup - FormCreate - If the user is an accountant then default the BackupFileName to the Cashbook directory name.
                       - uBankLinkNoFileFound - Added a "Don't show this again" option - Milo Murphy/Kieran Ryan.
                       - MainUnit - ShowBankLink - Only show TfmBankLinkNoFileFound if user hasn't ticked "Don't show this again".
                       - AccsData - CreatePreferenceDefaults - Default new ShowBankLinkFileNotFound pref to True so TfmBankLinkNoFileFound appears before user can press "Don't show this again".
                       - uPreferenceConsts - New const for ShowBankLinkFileNotFound.